Fix two Internet Explorer-related issues
* Fixed: Shimmed window.scrollY by mapping it to window.pageYOffset
* Fixed: Navbar not aligned to bottom of window on homepage. Bug report:
         https://connect.microsoft.com/IE/feedback/details/814380/

--- a/src/css/page.home.css
+++ b/src/css/page.home.css
@@ -908,6 +908,18 @@ main{
 	}
 }
 
+/** IE 10-11: Fix for https://connect.microsoft.com/IE/feedback/details/814380/ */
+@media (min-width: 55em) and (-ms-high-contrast: active), (min-width: 55em) and (-ms-high-contrast: none){
+	.drop-nav #top{
+		transform: translateY(100vh);
+		margin-top: -3em;
+	}
+		.pin-nav #top{
+			margin-top: 0;
+		}
+}
+
+
 
 /*---------------------------------------------------------------------------*
 	3a: 1024+ ("TRADITIONAL" DESKTOP SIZE)
